# Engine-Manager-GUI

./: .gitignore  README.md  pyinstaller.spec  pyproject.toml
.github/workflows/: build_exe.yml  cd.yml  ci.yml
openpectus_engine_manager_gui/: __init__.py  test.py
