[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openpectus_engine_manager_gui"
authors = [
  {name = "Eskild Schroll-Fleischer", email = "eyfl@novonordisk.com"},
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">= 3.11"

dependencies = [
    "openpectus",
    "httpx",
    "pystray",
    "filelock",
]

keywords = ["gui"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: System",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
development = [
    "flake8",
    "pyright",
    "black",
    "build",
    "pyinstaller",
]

[project.urls]
Documentation = "https://docs.openpectus.org/"
Repository = "https://github.com/Open-Pectus/Engine-Manager-Gui.git"
GitHub = "https://github.com/Open-Pectus/Engine-Manager-Gui"
Issues = "https://github.com/Open-Pectus/Engine-Manager-Gui/issues"

[tool.flit.module]
name = "openpectus_engine_manager_gui"

[project.scripts]
pectus-engine-manager = "openpectus_engine_manager_gui:main"

[tool.pyright]
include = ["openpectus_engine_manager_gui"]
exclude = [
    "**/__pycache__",
]
